// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button control isActive 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  && {
    font-size: 14px;
    color: ",
          [Function],
          "
    box-shadow: 9px 9px 15px rgba(15, 99, 203, 0.179551);
    padding: 15px 45px;
    background: #fff;
    line-height: 26px;
    text-align: center;
    letter-spacing: 2px;
    &:hover {
      background: #fff;
    }
  }
",
        ],
      },
      "displayName": "Styled(Component)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
      Symbol(Symbol.hasInstance): [Function],
    }
  }
  forwardedRef={null}
  isActive={true}
>
  Text
</StyledComponent>
`;

exports[`Button control render 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-bdVaJa",
        "isStatic": false,
        "rules": Array [
          "
  && {
    font-size: 14px;
    color: ",
          [Function],
          "
    box-shadow: 9px 9px 15px rgba(15, 99, 203, 0.179551);
    padding: 15px 45px;
    background: #fff;
    line-height: 26px;
    text-align: center;
    letter-spacing: 2px;
    &:hover {
      background: #fff;
    }
  }
",
        ],
      },
      "displayName": "Styled(Component)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-bdVaJa",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
      Symbol(Symbol.hasInstance): [Function],
    }
  }
  forwardedRef={null}
>
  Text
</StyledComponent>
`;
